src/main/java/com/example/team_work_management/exception/error/EmailNotFoundException.java
package com.example.team_work_management.exception.error;

public class EmailNotFoundException extends RuntimeException{
    public EmailNotFoundException(String message){
        super(message);
    }
}
